--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -8,47 +8,29 @@
 * @website https://betterdiscord.app/theme/Nocturnal
 */
 @import url("https://xcruxiex.github.io/themes/themes-cores/nocturnal.css");
-/*
-                                                                                                                                                                     
-                                                                                                                                                                     
-NNNNNNNN        NNNNNNNN                                              tttt                                                                                   lllllll 
-N:::::::N       N::::::N                                           ttt:::t                                                                                   l:::::l 
-N::::::::N      N::::::N                                           t:::::t                                                                                   l:::::l 
-N:::::::::N     N::::::N                                           t:::::t                                                                                   l:::::l 
-N::::::::::N    N::::::N   ooooooooooo       ccccccccccccccccttttttt:::::ttttttt    uuuuuu    uuuuuu rrrrr   rrrrrrrrr   nnnn  nnnnnnnn      aaaaaaaaaaaaa    l::::l 
-N:::::::::::N   N::::::N oo:::::::::::oo   cc:::::::::::::::ct:::::::::::::::::t    u::::u    u::::u r::::rrr:::::::::r  n:::nn::::::::nn    a::::::::::::a   l::::l 
-N:::::::N::::N  N::::::No:::::::::::::::o c:::::::::::::::::ct:::::::::::::::::t    u::::u    u::::u r:::::::::::::::::r n::::::::::::::nn   aaaaaaaaa:::::a  l::::l 
-N::::::N N::::N N::::::No:::::ooooo:::::oc:::::::cccccc:::::ctttttt:::::::tttttt    u::::u    u::::u rr::::::rrrrr::::::rnn:::::::::::::::n           a::::a  l::::l 
-N::::::N  N::::N:::::::No::::o     o::::oc::::::c     ccccccc      t:::::t          u::::u    u::::u  r:::::r     r:::::r  n:::::nnnn:::::n    aaaaaaa:::::a  l::::l 
-N::::::N   N:::::::::::No::::o     o::::oc:::::c                   t:::::t          u::::u    u::::u  r:::::r     rrrrrrr  n::::n    n::::n  aa::::::::::::a  l::::l 
-N::::::N    N::::::::::No::::o     o::::oc:::::c                   t:::::t          u::::u    u::::u  r:::::r              n::::n    n::::n a::::aaaa::::::a  l::::l 
-N::::::N     N:::::::::No::::o     o::::oc::::::c     ccccccc      t:::::t    ttttttu:::::uuuu:::::u  r:::::r              n::::n    n::::na::::a    a:::::a  l::::l 
-N::::::N      N::::::::No:::::ooooo:::::oc:::::::cccccc:::::c      t::::::tttt:::::tu:::::::::::::::uur:::::r              n::::n    n::::na::::a    a:::::a l::::::l
-N::::::N       N:::::::No:::::::::::::::o c:::::::::::::::::c      tt::::::::::::::t u:::::::::::::::ur:::::r              n::::n    n::::na:::::aaaa::::::a l::::::l
-N::::::N        N::::::N oo:::::::::::oo   cc:::::::::::::::c        tt:::::::::::tt  uu::::::::uu:::ur:::::r              n::::n    n::::n a::::::::::aa:::al::::::l
-NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttttt      uuuuuuuu  uuuurrrrrrr              nnnnnn    nnnnnn  aaaaaaaaaa  aaaallllllll
-                                                                                                                                                                     
-                                                                                                                                                                     
-*/
 @import url("https://xcruxiex.github.io/themes/core/badges.css");
 @import url("https://xcruxiex.github.io/themes/core/custom-font.css");
 @import url("https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css"); /* Radial Status */
 :root {
-  --backgroundColor01: #1e2731;
-  --backgroundColor02: #12171d;
-  --mainColor: #2275c9;
-  --gradientColor01: #00F260;
-  --gradientColor02: #0575E6;
-
+  --backgroundColor01: #25272b;
+  --backgroundColor02: #0b0f11;
+  --mainColor: #e99b00;
+  --gradientColor01: #e99b00;
+  --gradientColor02: #0b0f11;
+  --members-width: 280px; /* Width of the members list. | Default: 280px */
+  
   /* Better Hljs */
   --backgroundCode: #1e2731;
-  --backgroundName: rgba(0, 0, 0, .2);
+  --backgroundName: #000000;
 
   /* Radial Status */
   --rs-small-spacing: 2px;
-  --rs-large-spacing: 3px;
+  --rs-medium-spacing: 2px;
+  --rs-large-spacing: 2px;
+  --rs-small-width: 1.5px; /* Ring width (follows same sizing as above) | Default: 1.5px */
+	--rs-medium-width: 2px; /* Default: 2px */
+	--rs-large-width: 2px; /* Default: 2px */
   --rs-width: 2px;
-  --rs-avatar-shape: 50%;
   --rs-online-color: #43b581;
   --rs-idle-color: #faa61a;
   --rs-dnd-color: #f04747;
@@ -57,6 +39,8 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
   --rs-invisible-color: #747f8d;
   --rs-phone-visible: block;
   --rs-phone-color: var(--rs-online-color);
+  /*--font: 'gg sans', sans-serif;*/
+  /*noto sans, biko, */
+  --customFont: 'noto sans';
 
-  --customFont: 'gg sans', sans-serif;
 }
